--- a/app/index.html
+++ b/app/index.html
@@ -48,9 +48,9 @@
       </div>
     </div>
 
-    <div class="container">
+
     <div ng-view=""></div>
-    </div>
+
 
     <div class="footer">
       <div class="container">
@@ -83,6 +83,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/ng-infinite-scroll-npm-is-better-than-bower/build/ng-infinite-scroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -90,6 +91,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/productservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
